@@ -65,11 +65,11 @@ done
 # the development versions for the ARC 4.4 tool chain release. Only actually
 # matters if --auto-checkout is set.
 cgen="cgen:arc_4_4-cgen-1_0-dev"
-binutils="binutils:arc_4_8-binutils-2_23_1-dev"
-gcc="gcc:arc_4_8-gcc-4_8-dev"
+binutils="binutils:arc_4_4-binutils-2_19-dev"
+gcc="gcc:arc_4_4-gcc-4_4-dev"
 gdb="gdb:arc_4_8-gdb-7_5_1-dev"
-newlib="newlib:arc_4_8-newlib-2_0-dev"
-uclibc="uClibc:arc_4_8-uClibc-0_9_30-dev"
+newlib="newlib:arc_4_4-newlib-1_17-dev"
+uclibc="uClibc:arc_4_4-uClibc-0_9_30-dev"
 linux="linux:stable-arc-3.2"
 
 for version in ${cgen} ${binutils} ${gcc} ${gdb} ${newlib} ${uclibc} ${linux}
